--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx
 
-      - name: Build and push ARM64 Version
+      - name: Build and push docker image
         uses: docker/build-push-action@v2
         with:
           context: .
