Build seperate docker images

--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -1,4 +1,4 @@
-# docker build . -t knatnetwork/github-runner-kms-rs:latest-amd64
+# docker build . -t knatnetwork/github-runner-kms-rs:latest-arm64
 FROM rust:1.72 as builder
 
 WORKDIR /app
@@ -11,15 +11,15 @@ RUN mkdir src
 
 COPY src ./src
 
-RUN rustup target add x86_64-unknown-linux-musl
-RUN cargo build --release --target=x86_64-unknown-linux-musl
+RUN rustup target add aarch64-unknown-linux-musl
+RUN cargo build --release --target=aarch64-unknown-linux-musl
 
 FROM alpine:latest
 
 WORKDIR /
 
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
-COPY --from=builder /app/target/x86_64-unknown-linux-musl/release/github-runner-kms-rs /github-runner-kms-rs
+COPY --from=builder /app/target/aarch64-unknown-linux-musl/release/github-runner-kms-rs /github-runner-kms-rs
 
 ENV ROCKET_ADDRESS=0.0.0.0
 ENV ROCKET_PORT=3000
