--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,45 @@ on:
     branches:
       - master
 jobs:
-  build-image:
+  build-image-amd64:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: knatnetwork
+          password: ${{ secrets.GITHUB_TOKEN }}
+    
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: knatnetwork
+          password: ${{ secrets.DOCKERHUB_PASSWD }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build and push docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64
+          push: true
+          provenance: false
+          sbom: false
+          tags: |
+            ghcr.io/knatnetwork/github-runner-kms-rs:latest-amd64
+            knatnetwork/github-runner-kms-rs:latest-amd64
+
+
+  build-image-arm64:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -24,39 +62,59 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWD }}
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: knatnetwork
           password: ${{ secrets.DOCKERHUB_PASSWD }}
 
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx
 
       - name: Build and push docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: linux/arm64,linux/amd64
+          file: ./Dockerfile.arm64
+          platforms: linux/arm64
           push: true
+          provenance: false
+          sbom: false
           tags: |
-            ghcr.io/knatnetwork/github-runner-kms-rs
-            knatnetwork/github-runner-kms-rs
+            ghcr.io/knatnetwork/github-runner-kms-rs:latest-arm64
+            knatnetwork/github-runner-kms-rs:latest-arm64
 
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-          
-      - name: Move cache
+
+  combine-two-images:
+    runs-on: ubuntu-latest
+    needs:
+      - build-image-arm64
+      - build-image-amd64
+    steps:
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: knatnetwork
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: knatnetwork
+          password: ${{ secrets.DOCKERHUB_PASSWD }}
+
+      - name: Get regctl
         run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+          wget -q https://github.com/regclient/regclient/releases/download/v0.4.5/regctl-linux-amd64
+          chmod +x regctl-linux-amd64
+
+      - name: Combine two images on GHCR and sync to DockerHub
+        run: |
+          docker manifest create ghcr.io/knatnetwork/github-runner-kms-rs:latest --amend ghcr.io/knatnetwork/github-runner-kms-rs:latest-amd64 --amend ghcr.io/knatnetwork/github-runner-kms-rs:latest-arm64
+          docker manifest push ghcr.io/knatnetwork/github-runner-kms-rs:latest
+
+          ./regctl-linux-amd64 image copy ghcr.io/knatnetwork/github-runner-kms-rs:latest knatnetwork/github-runner:github-runner-kms-rs:latest -v info
