--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ rocket_contrib = "0.4.11"
 serde = "1.0.188"
 serde_derive = "1.0.188"
 serde_json = "1.0.105"
+openssl = { version = "0.10", features = ["vendored"] }
