--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -117,4 +117,4 @@ jobs:
           docker manifest create ghcr.io/knatnetwork/github-runner-kms-rs:latest --amend ghcr.io/knatnetwork/github-runner-kms-rs:latest-amd64 --amend ghcr.io/knatnetwork/github-runner-kms-rs:latest-arm64
           docker manifest push ghcr.io/knatnetwork/github-runner-kms-rs:latest
 
-          ./regctl-linux-amd64 image copy ghcr.io/knatnetwork/github-runner-kms-rs:latest knatnetwork/github-runner:github-runner-kms-rs:latest -v info
+          ./regctl-linux-amd64 image copy ghcr.io/knatnetwork/github-runner-kms-rs:latest knatnetwork/github-runner-kms-rs:latest -v info
