--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,8 @@ edition = "2021"
 
 [dependencies]
 lazy_static = "1.4.0"
-reqwest = {version = "0.10.10", features = ["blocking","json"]}
-rocket = "=0.5.0-rc.3"
-rocket_contrib = "0.4.11"
+reqwest = {version = "0.12.15", features = ["blocking","json"]}
+rocket = { version = "0.5", features = ["json"] }
 serde = "1.0.188"
 serde_derive = "1.0.188"
 serde_json = "1.0.105"
